spacing bottom fix

--- a/css/foraging.css
+++ b/css/foraging.css
@@ -113,6 +113,7 @@
   width: 100%;
   height: 20px;
   text-align: center;
+  margin-bottom: var(--gap_l);
 }
 
 .dots {
